--- a/index.html
+++ b/index.html
@@ -379,8 +379,12 @@
         <source src="data:audio/wav;base64,UklGRnoGAABXQVZFZm10IBAAAAABAAEAQB8AAEAfAAABAAgAZGF0YQoGAACBhYqFbF1fdJivrJBhNjVgodDbq2EcBj+a2/LDciUFLIHO8tiJNwgZaLvt559NEAxQp+PwtmMcBjiR1/LMeSwFJHfH8N2QQAoUXrTp66hVFApGn+DyvmUbBTiR1/LMeSwFJHfH8N2QQAoUXrTp66hVFApGn+DyvmUbBTiR1/LMeSwF" type="audio/wav">
     </audio>
     <footer class="footer-copyright">
-        © 2025. Bản quyền và phát triển thuộc về <a href="https://www.facebook.com/clonethinh/" target="_blank" rel="noopener noreferrer"><strong>Phạm Thịnh</strong></a>.
+        © 2025. Bản quyền và phát triển thuộc về 
+        <a href="https://www.facebook.com/clonethinh/" target="_blank" rel="noopener noreferrer">
+            <strong>Phạm Thịnh</strong>
+        </a>.
     </footer>
+
 
     <!-- Link to external JavaScript file -->
     <script src="script.js"></script>
